--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,7 +76,7 @@
      </rect>
     </property>
     <property name="plainText">
-     <string>/Users/wangjb/Documents/Project/pattern_matching/qfn/qfn-src-2.bmp</string>
+     <string>/Users/wangjb/Documents/Project/pattern_matching/qfn/qfn-src-1.bmp</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="plainTextEdit_3">
@@ -89,7 +89,7 @@
      </rect>
     </property>
     <property name="plainText">
-     <string>/Users/wangjb/Documents/Project/pattern_matching/qfn/qfn-dst-2-1.bmp</string>
+     <string>/Users/wangjb/Documents/Project/pattern_matching/qfn/qfn-dst-1-2.bmp</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -141,7 +141,7 @@
      </rect>
     </property>
     <property name="plainText">
-     <string>/Users/wangjb/Documents/Project/pattern_matching/qfn/qfn-res</string>
+     <string>/Users/wangjb/Documents/Project/pattern_matching/qfn/qfn-out</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="plainTextEdit_5">
@@ -272,6 +272,58 @@
     </property>
     <property name="text">
      <string>Dst Img</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>330</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>K Size of Filter</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit_9">
+    <property name="geometry">
+     <rect>
+      <x>970</x>
+      <y>330</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="plainText">
+     <string>5</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>360</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Pixel Threshold</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextEdit_10">
+    <property name="geometry">
+     <rect>
+      <x>970</x>
+      <y>360</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="plainText">
+     <string>30</string>
     </property>
    </widget>
   </widget>
