--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -274,59 +274,7 @@
      <string>Template Img</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_11">
-    <property name="geometry">
-     <rect>
-      <x>850</x>
-      <y>330</y>
-      <width>111</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>K Size of Filter</string>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_9">
-    <property name="geometry">
-     <rect>
-      <x>970</x>
-      <y>330</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>5</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_12">
-    <property name="geometry">
-     <rect>
-      <x>850</x>
-      <y>360</y>
-      <width>111</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Pixel Threshold</string>
-    </property>
-   </widget>
-   <widget class="QPlainTextEdit" name="plainTextEdit_10">
-    <property name="geometry">
-     <rect>
-      <x>970</x>
-      <y>360</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="plainText">
-     <string>30</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="detectAll">
     <property name="geometry">
      <rect>
       <x>990</x>
